--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "tauri:build": "vue-cli-service tauri:build",
+    "dev": "vue-cli-service tauri:serve"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -18,6 +20,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-tauri": "~1.0.0"
   }
 }
